bugfix grid in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
     :root {
       --background: 0 0% 100%;
       --foreground: 210 11.1% 3.53%;
+      --grid-color: 0 0% 9%;
 
       --card: 0 0% 100%;
       --card-foreground: 210 11.1% 3.53%;
@@ -38,6 +39,7 @@
     .dark {
       --background: 210 11.1% 3.53%;
       --foreground: 0 0% 98%;
+      --grid-color: 255 255 255;
 
       --card: 210 11.1% 3.53%;
       --card-foreground: 0 0% 98%;
